--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,7 +1,7 @@
 NAME = clap_trap
 CXX = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
-SRC = ClapTrap.cpp main.cpp
+SRC = ClapTrap.cpp main.cpp ScavTrap.cpp
 OBJ = $(SRC:.cpp=.o)
 
 
