--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,7 +1,7 @@
-NAME = frag_trap
+NAME = DiamondTrap
 CXX = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
-SRC = ClapTrap.cpp main.cpp ScavTrap.cpp FragTrap.cpp
+SRC = ClapTrap.cpp main.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 OBJ = $(SRC:.cpp=.o)
 
 
